
* Mon Mar 14 16:58:24 2005, pabs <pabs@pablotron.org>
  * raggle: add comments to several methods and modules missing them
    (for API documentation, and some vague attempt at a semblence of
    organization)

* Tue Mar 15 12:18:01 2005, pabs <pabs@pablotron.org>
  * raggle: change HTML::TAG_SET so rdoc won't barf when generating API
    documentation.

* Tue Mar 15 12:58:18 2005, pabs <pabs@pablotron.org>
  * not really a change here, but I updated the online documentation for
    our pending 0.4.0 release!

* Tue Mar 15 13:39:19 2005, pabs <pabs@pablotron.org>
  * Makefile: on install, convert DATADIR inside raggle to DATADIR
  * raggle: add fileutils as an optional requirement (for the web_ui
    stuff below)
  * raggle: check DATADIR/extras/web_ui if ~/.raggle/web_ui doesn't
    exist

* Tue Mar 15 13:58:21 2005, pabs <pabs@pablotron.org>
  * raggle: speed up FeedList#categories

* Tue Mar 15 18:53:54 2005, pabs <pabs@pablotron.org>
  * Makefile: added defaultconfig rule
  * README: update last updated date
  * README: added all the new features to the introduction
  * README: changed system requirements to a table
  * README: update getting started section "--add --url 'url'"to 
    "--add 'url'"
  * README: add note about viewing command-line options via --help and 
    key bindings via ? to "Getting Started" section
  * README: added note about importing blogrols via --import-opml
  * README: added note about finding feeds (and example)
  * README: added note about --default-config
  * README: removed FAQ about terminal resize
  * README: updates to all links (mainly removing www. sillyness)
  * README: removed richard's non-existant RSS feed
  * raggle: added --default-config command-line option (dumsp default
    configuration hash to stdout)
  * raggle: selecting an item in the find feeds window adds it to feed
    list
  * raggle: don't auto-select in find feed window
  * doc/default_config.rb: regenerated